@@ -10,6 +10,8 @@ version 3.0.0 (??/??/????):
 	* Possibility to require encryption. Also, using encryption when
 	  available is default option now. (Tomasz Wasilczyk)
 	* Show local time for incoming messages. (Tomasz Wasilczyk) (#4579)
+	* Detailed descriptions on connection failures. (Tomasz Wasilczyk)
+	  (#14648)
 
 	MXit:
 	* Remove all reference to Hidden Number.
